# cpp-lox

./: .gitignore  BUGS.md  README.md  development.sh  meson.build  meson_options.txt  perf.data  requirements.txt
.github/workflows/: cd.yaml  ci.yaml
benchmarks/: bench_expressions.cpp  bench_helper.hpp  bench_invocations.cpp  expression.sh  meson.build  string_concat.sh  wordcount.cpp
benchmarks/scripts/: randexpr.py
documents/: bytecode_file_format.md  opcodes_list.md
examples/: linkedlist.lox  linkedlist_disassembly.txt  math_evaluator.lox  memo_fibo.lox  selection_sort.lox
flags/: meson.build
include/: allocator.hpp  chunk.hpp  classes.hpp  compiler.hpp  compiler_fwd.hpp  compiler_opts.hpp  config.hpp  context.hpp  debug.hpp  debug_vm.hpp  deserializer.hpp  errcodes.hpp  error_reporter.hpp  file_header.hpp  function.hpp  gc.hpp  globals.hpp  hash.hpp  hashmap.hpp  lexer.hpp  list.hpp  logger.hpp  lox.hpp  map.hpp  native.hpp  object.hpp  opcode.hpp  parser.hpp  result.hpp  serialized_bytecode.hpp  serializer.hpp  table.hpp  testrunner.hpp  token.hpp  token_type.hpp  utils.hpp  value.hpp  vm.hpp  vmopts.hpp
loxtests/: closure_test.lox
src/: allocator.cpp  chunk.cpp  compiler.cpp  debug.cpp  deserializer.cpp  gc.cpp  lexer.cpp  lox.cpp  main.cpp  meson.build  parser.cpp  register_native_functions.cpp  serializer.cpp  value.cpp  vm.cpp
src/common/: allocator.cpp  chunk.cpp  debug_vm.cpp  gc.cpp  value.cpp
src/compiler/: compiler.cpp  debug_compiler.cpp  lexer.cpp
src/native/: classes.cpp  list.cpp  map.cpp  math.cpp  memory.cpp  stdio.cpp  stdlib.cpp  string.cpp  test.cpp  time.cpp
src/serialization/: serializer.cpp
src/stubs/: compiler_stub.cpp
src/tools/: loxdump.cpp  meson.build
src/vm/: register_native_functions.cpp  vm.cpp
subprojects/: .gitignore
tests/: conftest.py  cpplox_test.cpp  meson.build  test_basic.py  test_break_continue_loop.py  test_closures.py  test_conditional_statements.py  test_const.py  test_functions.py  test_functions_recursion.py  test_gc.py  test_global_variables.py  test_hashing.py  test_instances.py  test_list.py  test_local_variables.py  test_logical_operators.py  test_loop_closure.py  test_loops.py  test_map.py  test_methods.py  test_native.py  test_super.py  test_switch_case.py
