option(
    'development',
    type: 'boolean',
    value: false,
    description: 'Enable development mode, when this is set and the compiler is clang, enables additional flags',
)

option(
    'enable-tests',
    type: 'boolean',
    value: false,
    description: 'Enables building of tests'
)

option(
    'enable-benchmarks',
    type: 'boolean',
    value: false,
    description: 'Enables building of benchmarks'
)